--- a/src/UI/WorkingCopy.xaml
+++ b/src/UI/WorkingCopy.xaml
@@ -59,7 +59,7 @@
 
                     <local:FilesDisplayModeSwitch
                         Grid.Column="0"
-                        Mode="{Binding Source={x:Static source:App.Preference}, Path=UIUnstageDisplayMode, Mode=TwoWay}"
+                        Mode="{Binding Source={x:Static source:App.Setting}, Path=UI.UnstageFileDisplayMode, Mode=TwoWay}"
                         Opacity=".4"/>
                     <Label Grid.Column="1" Content="UNSTAGED" FontWeight="Bold" Foreground="{StaticResource Brush.FG}" Opacity=".4"/>
                     <Button Grid.Column="3" Click="Stage" Margin="4,0" ToolTip="STAGE" Background="Transparent">
@@ -74,7 +74,7 @@
                     Grid.Row="1" 
                     x:Name="unstagedTree" 
                     Background="{StaticResource Brush.BG2}"
-                    Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIUnstageDisplayMode, Converter={StaticResource FilesDisplayModeToTree}}"
+                    Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.UnstageFileDisplayMode, Converter={StaticResource FilesDisplayModeToTree}}"
                     FontFamily="Consolas" 
                     PreviewMouseWheel="TreeMouseWheel"
                     helpers:TreeViewHelper.EnableMultiSelection="True"
@@ -127,7 +127,7 @@
                 <DataGrid
                     Grid.Row="1"
                     x:Name="unstagedList"
-                    Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIUnstageDisplayMode, Converter={StaticResource FilesDisplayModeToList}}"
+                    Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.UnstageFileDisplayMode, Converter={StaticResource FilesDisplayModeToList}}"
                     RowHeight="24"
                     SelectionChanged="UnstagedListSelectionChanged"
                     SelectionMode="Extended"
@@ -163,7 +163,7 @@
                         
                         <DataGridTextColumn 
                             Width="Auto" 
-                            Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIUnstageDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
+                            Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.UnstageFileDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
                             Binding="{Binding Path, Converter={StaticResource PathToFileName}}" 
                             Foreground="{StaticResource Brush.FG}" 
                             FontFamily="Consolas" 
@@ -171,7 +171,7 @@
 
                         <DataGridTextColumn 
                             Width="*" 
-                            Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIUnstageDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
+                            Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.UnstageFileDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
                             Binding="{Binding Path, Converter={StaticResource PathToFolderName}}" 
                             Foreground="{StaticResource Brush.FG2}" 
                             FontFamily="Consolas" 
@@ -179,7 +179,7 @@
                         
                         <DataGridTextColumn
                             Width="*"
-                            Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIUnstageDisplayMode, Converter={StaticResource FilesDisplayModeToListOnly}}" 
+                            Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.UnstageFileDisplayMode, Converter={StaticResource FilesDisplayModeToListOnly}}" 
                             Binding="{Binding Path}"
                             Foreground="{StaticResource Brush.FG}"
                             FontFamily="Consolas"
@@ -215,7 +215,7 @@
 
                     <local:FilesDisplayModeSwitch
                         Grid.Column="0"
-                        Mode="{Binding Source={x:Static source:App.Preference}, Path=UIStagedDisplayMode, Mode=TwoWay}"
+                        Mode="{Binding Source={x:Static source:App.Setting}, Path=UI.StagedFileDisplayMode, Mode=TwoWay}"
                         Opacity=".4"/>
                     <Label Grid.Column="1" Content="STAGED" FontWeight="Bold" Foreground="{StaticResource Brush.FG}"  Opacity=".4"/>
                     <Button Grid.Column="3" Click="Unstage" ToolTip="UNSTAGE" Margin="4,0" Background="Transparent">
@@ -229,7 +229,7 @@
                 <TreeView
                     Grid.Row="1" 
                     x:Name="stageTree" 
-                    Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIStagedDisplayMode, Converter={StaticResource FilesDisplayModeToTree}}"
+                    Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.StagedFileDisplayMode, Converter={StaticResource FilesDisplayModeToTree}}"
                     Background="{StaticResource Brush.BG2}"
                     FontFamily="Consolas" 
                     PreviewMouseWheel="TreeMouseWheel"
@@ -284,7 +284,7 @@
                     Grid.Row="1"
                     x:Name="stageList"
                     RowHeight="24"
-                    Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIStagedDisplayMode, Converter={StaticResource FilesDisplayModeToList}}"
+                    Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.StagedFileDisplayMode, Converter={StaticResource FilesDisplayModeToList}}"
                     SelectionChanged="StagedListSelectionChanged"
                     SelectionMode="Extended"
                     SelectionUnit="FullRow"
@@ -319,7 +319,7 @@
 
                         <DataGridTextColumn 
                             Width="Auto"                            
-                            Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIStagedDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
+                            Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.StagedFileDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
                             Binding="{Binding Path, Converter={StaticResource PathToFileName}}" 
                             Foreground="{StaticResource Brush.FG}" 
                             FontFamily="Consolas" 
@@ -327,7 +327,7 @@
 
                         <DataGridTextColumn 
                             Width="*"                            
-                            Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIStagedDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
+                            Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.StagedFileDisplayMode, Converter={StaticResource FilesDisplayModeToGrid}}" 
                             Binding="{Binding Path, Converter={StaticResource PathToFolderName}}" 
                             Foreground="{StaticResource Brush.FG2}" 
                             FontFamily="Consolas" 
@@ -335,7 +335,7 @@
 
                         <DataGridTextColumn
                             Width="*" 
-                            Visibility="{Binding Source={x:Static source:App.Preference}, Path=UIStagedDisplayMode, Converter={StaticResource FilesDisplayModeToListOnly}}" 
+                            Visibility="{Binding Source={x:Static source:App.Setting}, Path=UI.StagedFileDisplayMode, Converter={StaticResource FilesDisplayModeToListOnly}}" 
                             Binding="{Binding Path}" 
                             Foreground="{StaticResource Brush.FG}" 
                             FontFamily="Consolas" 
