--- a/src/UI/Launcher.xaml
+++ b/src/UI/Launcher.xaml
@@ -50,12 +50,6 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <Border Grid.ColumnSpan="3" VerticalAlignment="Bottom" Margin="0,0,0,-1" Height="1" Background="{StaticResource Brush.BG1}">
-                    <Border.Effect>
-                        <DropShadowEffect ShadowDepth="0" Opacity="1"/>
-                    </Border.Effect>
-                </Border>
-
                 <!-- Tabs -->
                 <ScrollViewer x:Name="openedTabsScroller" Grid.Column="0" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Disabled">
                     <TabControl x:Name="openedTabs" Padding="0" SnapsToDevicePixels="True" ItemsSource="{Binding ElementName=me, Path=Tabs}" SizeChanged="OpenedTabsSizeChanged">
@@ -140,11 +134,7 @@
                                     <Setter.Value>
                                         <ControlTemplate TargetType="{x:Type TabItem}">
                                             <Grid SnapsToDevicePixels="True" WindowChrome.IsHitTestVisibleInChrome="True" ToolTip="{Binding Tooltip}">
-                                                <Border x:Name="BG" Margin="-1,0" SnapsToDevicePixels="True" Background="Transparent" BorderThickness="0" BorderBrush="{StaticResource Brush.BG3}" CornerRadius="4,4,0,0">
-                                                    <Border.Effect>
-                                                        <DropShadowEffect ShadowDepth="0" Opacity=".7"/>
-                                                    </Border.Effect>
-                                                </Border>
+                                                <Border x:Name="BG" Margin="-1,0" SnapsToDevicePixels="True" Background="Transparent" CornerRadius="4,4,0,0"/>
 
                                                 <Rectangle
                                                     x:Name="Splitter"
@@ -182,8 +172,7 @@
                                             <ControlTemplate.Triggers>
                                                 <Trigger Property="IsSelected" Value="True">
                                                     <Setter Property="Panel.ZIndex" Value="2"/>
-                                                    <Setter TargetName="BG" Property="Background" Value="{DynamicResource Brush.BG1}"/>
-                                                    <Setter TargetName="BG" Property="BorderThickness" Value="1,1,1,0"/>
+                                                    <Setter TargetName="BG" Property="Background" Value="{StaticResource Brush.BG1}"/>
                                                     <Setter TargetName="CornerLeft" Property="Fill" Value="{StaticResource Brush.BG1}"/>
                                                     <Setter TargetName="CornerRight" Property="Fill" Value="{StaticResource Brush.BG1}"/>
                                                 </Trigger>
@@ -198,7 +187,7 @@
                                                         <Condition Property="IsMouseOver" Value="True"/>
                                                     </MultiTrigger.Conditions>
                                                     <Setter Property="Panel.ZIndex" Value="1"/>
-                                                    <Setter TargetName="BG" Property="Background" Value="{DynamicResource Brush.BG5}"/>
+                                                    <Setter TargetName="BG" Property="Background" Value="{StaticResource Brush.BG5}"/>
                                                     <Setter TargetName="CornerLeft" Property="Fill" Value="{StaticResource Brush.BG5}"/>
                                                     <Setter TargetName="CornerRight" Property="Fill" Value="{StaticResource Brush.BG5}"/>
                                                 </MultiTrigger>
