--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -1,16 +1,16 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Brush.BG1" Color="#FFDFDFDF"/>
+    <SolidColorBrush x:Key="Brush.BG1" Color="#FFEFEFEF"/>
     <SolidColorBrush x:Key="Brush.BG2" Color="White"/>
     <SolidColorBrush x:Key="Brush.BG3" Color="WhiteSmoke"/>
     <SolidColorBrush x:Key="Brush.BG4" Color="#FFE6E7E8"/>
     <SolidColorBrush x:Key="Brush.BG5" Color="#FFBDBDBD"/>
-    <SolidColorBrush x:Key="Brush.BG6" Color="#FFFFFFFF"/>
+    <SolidColorBrush x:Key="Brush.BG6" Color="#FFAFAFAF"/>
     <SolidColorBrush x:Key="Brush.BG7" Color="#FF836C2E"/>
     <SolidColorBrush x:Key="Brush.Border1" Color="#FF898989"/>
     <SolidColorBrush x:Key="Brush.Border2" Color="#FFCFCFCF"/>
     <SolidColorBrush x:Key="Brush.FG" Color="#FF1F1F1F"/>
-    <SolidColorBrush x:Key="Brush.FG2" Color="DarkGray"/>
+    <SolidColorBrush x:Key="Brush.FG2" Color="#FF6F6F6F"/>
     <SolidColorBrush x:Key="Brush.Badge" Color="#FF8F8F8F"/>
     <SolidColorBrush x:Key="Brush.Accent1" Color="#FF4295FF"/>
     <SolidColorBrush x:Key="Brush.Accent2" Color="#4C007ACC"/>
