optimize<CommitGraph>: rename CommitGraphHelper to CommitGraphData; improve checking visibility of lines/links/dots in commit graph

--- a/src/UI/Histories.xaml
+++ b/src/UI/Histories.xaml
@@ -53,7 +53,7 @@
             <DataGrid
                 Grid.Row="1"
                 x:Name="commitList"
-                RowHeight="{x:Static helpers:CommitGraphMaker.UNIT_HEIGHT}"
+                RowHeight="{x:Static helpers:CommitGraphData.UNIT_HEIGHT}"
                 ScrollViewer.ScrollChanged="CommitListScrolled"
                 SelectionChanged="CommitSelectChanged"
                 SelectionUnit="FullRow">
