fix<*>: fix resize border thickness error

--- a/src/UI/InteractiveRebase.xaml
+++ b/src/UI/InteractiveRebase.xaml
@@ -12,7 +12,7 @@
 
     <!-- Enable WindowChrome -->
     <WindowChrome.WindowChrome>
-        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32"/>
+        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32" ResizeBorderThickness="1"/>
     </WindowChrome.WindowChrome>
 
     <!-- Window Content -->
