--- a/src/UI/Launcher.xaml
+++ b/src/UI/Launcher.xaml
@@ -16,7 +16,7 @@
 
     <!-- Enable WindowChrome Feature -->
     <WindowChrome.WindowChrome>
-        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32"/>
+        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32" ResizeBorderThickness="1"/>
     </WindowChrome.WindowChrome>
 
     <!-- Window Layout -->
