--- a/src/UI/UpdateAvailable.xaml
+++ b/src/UI/UpdateAvailable.xaml
@@ -9,7 +9,7 @@
         WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <!-- Enable WindowChrome Feature -->
     <WindowChrome.WindowChrome>
-        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32"/>
+        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32" ResizeBorderThickness="1"/>
     </WindowChrome.WindowChrome>
 
     <!-- Window Layout -->
